// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.postprocessing.v2alpha;

option java_package = "org.wfanet.measurement.reporting.postprocessing.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportPostProcessingResultProto";

enum ReportProcessorStatus {
  SOLUTION_NOT_FOUND = 0;
  SOLUTION_FOUND_WITH_HIGHS = 1;
  SOLUTION_FOUND_WITH_OSQP = 2;
  PARTIAL_SOLUTION_FOUND_WITH_HIGHS = 3;
  PARTIAL_SOLUTION_FOUND_WITH_OSQP = 4;
}

message ReportProcessorResult {
  ReportProcessorStatus status = 1;
  map<string, int64> updated_measurements = 2;
  double primal_residual = 3;
}
